--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.espino.manageproductrecycler.AddProduct_Activity"/>
+        <activity android:name="com.example.espino.manageproductrecycler.ManageProduct_Activity"/>
     </application>
 
 </manifest>
